# ScholarSearchX

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: kg_dict.json
data/eval/: qrels.tsv  queries.json
src/hybrid_search/: cli.py
src/hybrid_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/hybrid_search/app/: streamlit_app.py
src/hybrid_search/datasets/: arxiv_downloader.py
src/hybrid_search/eval/: evaluate.py  metrics.py
src/hybrid_search/index/: compress_vbyte.py  inverted_index.py
src/hybrid_search/kg/: build_neo4j.py  graph.py  neo4j_store.py
src/hybrid_search/preprocess/: text.py
src/hybrid_search/rag/: hybrid.py  ollama_client.py
src/hybrid_search/search/: boolean_query.py  query_expand.py  spell.py  tfidf_ranker.py
src/hybrid_search/vector/: qdrant_store.py
tests/: test_boolean.py  test_kg_graph.py  test_rrf.py  test_tfidf.py  test_vbyte.py
