[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-search"
version = "0.1.0"
description = "Hybrid & KG-Enhanced Academic Search Engine (IR course project)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arxiv>=2.1.0",
  "nltk>=3.8.1",
  "numpy>=1.26.0",
  "streamlit>=1.31.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
kg_rag = [
  "httpx>=0.27.0",
  "neo4j>=5.20.0",
  "qdrant-client~=1.12.0",
]

[project.scripts]
hybrid-search = "hybrid_search.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
